--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.LoginActivity"
     tools:paddingBottom="@dimen/activity_vertical_margin"
-    tools:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:paddingRight="@dimen/activity_horizontal_margin"
+    tools:paddingStart="@dimen/activity_horizontal_margin"
+    tools:paddingEnd="@dimen/activity_horizontal_margin"
     tools:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
