Creation of Dialog for TransferActivity, setup and working | New ErrorType in case the recipient is not found | New Result.Failure class for unreachable server, replaces ServerError in case of SocketTimeoutExcpetion. ServerError failure is now only for code 5XX

--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -63,6 +63,7 @@
         app:layout_constraintEnd_toEndOf="@+id/amount"
         app:layout_constraintStart_toStartOf="@+id/amount"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.3"
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
